--- a/Sistema de Gestión de Museo Pictórico/CapaPresentacion.csproj
+++ b/Sistema de Gestión de Museo Pictórico/CapaPresentacion.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6C1BCA87-015E-4A1B-9776-BDDA924604DE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Sistema_de_Gestión_de_Museo_Pictórico</RootNamespace>
+    <RootNamespace>CapaPresentacion</RootNamespace>
     <AssemblyName>Sistema de Gestión de Museo Pictórico</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -67,36 +67,21 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormMain.cs">
+    <Compile Include="Formularios\FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
+    <Compile Include="Formularios\FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Logica\AsignacionVisita.cs" />
-    <Compile Include="Logica\CambioEstado.cs" />
-    <Compile Include="Logica\Cargo.cs" />
-    <Compile Include="Logica\DetalleExposicion.cs" />
-    <Compile Include="Logica\Empleado.cs" />
-    <Compile Include="Logica\Escuela.cs" />
-    <Compile Include="Logica\Estado.cs" />
-    <Compile Include="Logica\Exposicion.cs" />
-    <Compile Include="Logica\HorarioEmpleado.cs" />
-    <Compile Include="Logica\Obra.cs" />
-    <Compile Include="Logica\PublicoDestino.cs" />
-    <Compile Include="Logica\ReservaVisita.cs" />
-    <Compile Include="Logica\Sede.cs" />
-    <Compile Include="Logica\TipoExposicion.cs" />
-    <Compile Include="Logica\TipoVisita.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ucReservaVisitaGuiada.cs">
+    <Compile Include="ControlesDeUsuario\ucReservaVisitaGuiada.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ucReservaVisitaGuiada.Designer.cs">
+    <Compile Include="ControlesDeUsuario\ucReservaVisitaGuiada.Designer.cs">
       <DependentUpon>ucReservaVisitaGuiada.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="FormMain.resx">
+    <EmbeddedResource Include="Formularios\FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
@@ -108,8 +93,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ucReservaVisitaGuiada.resx">
+    <EmbeddedResource Include="ControlesDeUsuario\ucReservaVisitaGuiada.resx">
       <DependentUpon>ucReservaVisitaGuiada.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -125,5 +111,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaNegocio\CapaNegocio.csproj">
+      <Project>{0471bacb-ffc9-42e8-8267-0cf06bc329b3}</Project>
+      <Name>CapaNegocio</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
