--- a/CapaNegocio/CapaNegocio.csproj
+++ b/CapaNegocio/CapaNegocio.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Empleado.cs" />
     <Compile Include="Estado.cs" />
     <Compile Include="Exposicion.cs" />
+    <Compile Include="GestorDeReserva.cs" />
     <Compile Include="HorarioEmpleado.cs" />
     <Compile Include="Obra.cs" />
     <Compile Include="PublicoDestino.cs" />
