--- a/Sistema de Gestión de Museo Pictórico/CapaPresentacion.csproj
+++ b/Sistema de Gestión de Museo Pictórico/CapaPresentacion.csproj
@@ -98,6 +98,7 @@
     <EmbeddedResource Include="ControlesDeUsuario\ucReservaVisitaGuiada.resx">
       <DependentUpon>ucReservaVisitaGuiada.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\CapaNegocio.TipoVisita.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
