--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="DEscuela.cs" />
+    <Compile Include="DExposicion.cs" />
+    <Compile Include="DExposicionesxSede.cs" />
     <Compile Include="DSede.cs" />
     <Compile Include="DTipoVisita.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
