--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="DCargo.cs" />
+    <Compile Include="DDetalleExposicion.cs" />
+    <Compile Include="DEmpleado.cs" />
     <Compile Include="DEscuela.cs" />
     <Compile Include="DExposicion.cs" />
     <Compile Include="DExposicionesxSede.cs" />
