--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -47,7 +47,7 @@
     <Compile Include="DEmpleado.cs" />
     <Compile Include="DEscuela.cs" />
     <Compile Include="DExposicion.cs" />
-    <Compile Include="DExposicionesxSede.cs" />
+    <Compile Include="DExposicionesPorSede.cs" />
     <Compile Include="DSede.cs" />
     <Compile Include="DTipoVisita.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
