--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -50,8 +50,10 @@
     <Compile Include="DExposicionesPorSede.cs" />
     <Compile Include="DObra.cs" />
     <Compile Include="DSede.cs" />
+    <Compile Include="DSesion.cs" />
     <Compile Include="DTipoVisita.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DUsuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
