--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Conexion.cs" />
     <Compile Include="DCargo.cs" />
     <Compile Include="DDetalleExposicion.cs" />
+    <Compile Include="DDetalleExposicionPorExposicion.cs" />
     <Compile Include="DEmpleado.cs" />
     <Compile Include="DEscuela.cs" />
     <Compile Include="DExposicion.cs" />
